[gd_scene load_steps=5 format=3 uid="uid://ct0ymg0e2dgvf"]

[ext_resource type="Script" path="res://Scripts/patrol_enemy.gd" id="1_s74vl"]
[ext_resource type="Texture2D" uid="uid://bwsjfh3sthemg" path="res://1-Bit Platformer Pack/Tiles/Default/tile_0340.png" id="1_w6447"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_atx5v"]
size = Vector2(16, 16)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_qjy16"]
size = Vector2(256, 24)

[node name="PatrolEnemy" type="CharacterBody2D"]
collision_layer = 5
collision_mask = 2
script = ExtResource("1_s74vl")
maximum_patrol_distance = 300.0
speed = 20.0

[node name="EnemyHitbox" type="CollisionShape2D" parent="."]
position = Vector2(0, -8)
shape = SubResource("RectangleShape2D_atx5v")

[node name="EnemyDamageHitbox" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 2

[node name="EnemyHitbox" type="CollisionShape2D" parent="EnemyDamageHitbox"]
position = Vector2(0, -8)
shape = SubResource("RectangleShape2D_atx5v")

[node name="DetectionArea" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 2

[node name="DetectionHitbox" type="CollisionShape2D" parent="DetectionArea"]
position = Vector2(0, -12)
shape = SubResource("RectangleShape2D_qjy16")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(-2.38419e-07, -8)
texture = ExtResource("1_w6447")

[connection signal="area_entered" from="EnemyDamageHitbox" to="." method="_on_enemy_damage_hitbox_area_entered"]
[connection signal="area_entered" from="DetectionArea" to="." method="_on_detection_area_area_entered"]
[connection signal="area_exited" from="DetectionArea" to="." method="_on_detection_area_area_exited"]
